# FaasANNS

./: .gitignore  README.md  operations  overview  pyproject.toml  requirements.txt
configs/: server.aliyun.json
data/index/full/pq/: pq_codebooks.npy  pq_meta.json
data_generator/: build_pq_index.py  constrained_kmeans_w_clusters.py
docs/: ARCHITECTURE.md
functions/ann_candidate_search/: README.md  app.py  handler.py  index_loader.py
plan/aliyun_deployment/: 01_ecs_server.md  02_function_compute.md  03_storage_and_network.md  04_operation_commands.md  README.md
scripts/: build_fc_package.sh  build_index.py  run_queries.sh
src/: __init__.py  main.py
src/faas/: __init__.py  aliyun_fc_provider.py  local_provider.py  payload.py
src/scaling/: __init__.py  metrics.py  planner.py  prewarm.py
src/search/: __init__.py  hnsw.py  service.py
src/server/: __init__.py  middleware.py  routes.py  schemas.py
src/utils/: __init__.py  config.py  logging.py  timer.py
src/vectors/: __init__.py  fvecs.py  ivecs.py  vector_store.py
tests/: conftest.py  test_config.py  test_faas_provider.py  test_function_pq.py  test_local_provider.py  test_pq_generator.py  test_scaling.py  test_search.py  test_search_service_pipeline.py  test_strict_runtime.py
tests/hnsw/: run_queries.py
